*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.24 ===
* Fixed compilation on modern compilers.

=== 1.0.23 ===
* Added support of sidechain passed by shared memory link.
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.
* Added Fill color for input and gain reduction.

=== 1.0.18 ===
* Threshold markers are now editable.
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Significantly improved precision of oversampling functions.
* Fixed bug in ALR function which could cause random audio scratches.
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Initial release.
