@@ -53,7 +53,7 @@ MERGED_DEPENDENCIES        := \
   $(PLUGIN_SHARED)
 UNIQ_MERGED_DEPENDENCIES   := $(call uniq, $(MERGED_DEPENDENCIES))
 DEPENDENCIES                = $(UNIQ_MERGED_DEPENDENCIES)
-FEATURES                   := $(sort $(call subtraction,$(SUB_FEATURES),$(DEFAULT_FEATURES) $(ADD_FEATURES)))
+BUILD_FEATURES             := $(sort $(call subtraction,$(SUB_FEATURES),$(if $(FEATURES),$(FEATURES),$(DEFAULT_FEATURES)) $(ADD_FEATURES)))
 
 # Determine versions
 ifeq ($(findstring -devel,$(ARTIFACT_VERSION)),-devel)
@@ -68,6 +68,9 @@ else
     $(eval $(dep)_BRANCH="$($(dep)_VERSION)") \
   )
 endif
+
+$(info PKG_CONFIG = $(PKG_CONFIG))
+$(info HOST_PKG_CONFIG = $(HOST_PKG_CONFIG))
 
 define pkgconfig =
   $(eval name=$(1))
@@ -320,7 +323,7 @@ $(CONFIG_VARS): prepare
 config: $(CONFIG_VARS)
 	echo "Host architecture: $(HOST_ARCHITECTURE_FAMILY)/$(HOST_ARCHITECTURE) ($(HOST_ARCHITECTURE_CFLAGS))"
 	echo "Architecture:      $(ARCHITECTURE_FAMILY)/$(ARCHITECTURE) ($(ARCHITECTURE_CFLAGS))"
-	echo "Features:          $(FEATURES)"
+	echo "Features:          $(BUILD_FEATURES)"
 	echo "Configured OK"
 
 help: | pathvars toolvars sysvars
